--- a/C0721G2-livestock-farm-FE/src/app/component/news/news-detail/news-detail.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/news/news-detail/news-detail.component.html
@@ -28,7 +28,7 @@
       </div>
       <!--                Tác giả-->
       <div class="float-end">
-        <p class="fs-5 fw-bold">{{news.employee.name}}</p>
+<!--        <p class="fs-5 fw-bold">{{news.employee.name}}</p>-->
       </div>
     </div>
   </div>
