--- a/C0721G2-livestock-farm-FE/src/app/component/news/news-create/news-create.component.css
+++ b/C0721G2-livestock-farm-FE/src/app/component/news/news-create/news-create.component.css
@@ -1,4 +1,28 @@
 #editor {
   width: 100%;
+}
 
+.ck .ck-content .ck-editor__editable .ck-rounded-corners .ck-editor__editable_inline .ck-blurred {
+  padding-bottom: 90px;
+}
+
+
+@keyframes spinner {
+  to {transform: rotate(360deg);}
+}
+
+.spinner:before {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 20px;
+  height: 20px;
+  margin-top: -10px;
+  margin-left: -10px;
+  border-radius: 50%;
+  border: 2px solid #ffffff;
+  border-top-color: #000000;
+  animation: spinner .8s linear infinite;
 }
