--- a/C0721G2-livestock-farm-FE/src/app/component/employee/employee-create/employee-create.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/employee/employee-create/employee-create.component.html
@@ -241,7 +241,8 @@
                     <div class="btn-group me-2">
                       <button class="btn btn-success" data-backdrop="static" type="submit" data-bs-toggle="modal"
                               data-bs-target="#Modal"
-                              [disabled]="employeeForm.invalid">Lưu
+                              [disabled]="employeeForm.invalid"
+                              [class.spinner]="loading" [disabled]="loading">Lưu
                       </button>
                     </div>
                     <div class="btn-group me-2">
