--- a/C0721G2-livestock-farm-FE/src/app/component/employee/employee-edit/employee-edit.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/employee/employee-edit/employee-edit.component.html
@@ -248,7 +248,8 @@
                        aria-label="Toolbar with button groups">
                     <div class="btn-group me-2">
                       <button class="btn btn-success" type="submit" data-bs-toggle="modal" data-bs-target="#Modal"
-                              [disabled]="employeeForm.invalid">Lưu
+                              [disabled]="employeeForm.invalid"
+                              [class.spinner]="loading" [disabled]="loading">Lưu
                       </button>
                     </div>
                     <div class="btn-group me-2">
@@ -256,15 +257,6 @@
                     </div>
                   </div>
 
-                  <!--            <div class="btn-toolbar mb-3 justify-content-md-center bd-highlight" role="toolbar"-->
-                  <!--                 aria-label="Toolbar with button groups">-->
-                  <!--              <div class="btn-group me-2">-->
-                  <!--                <button class="btn btn-secondary" type="submit">Xóa</button>-->
-                  <!--              </div>-->
-                  <!--              <div class="btn-group me-2">-->
-                  <!--                <button class="btn btn-success" type="submit">Lưu</button>-->
-                  <!--              </div>-->
-                  <!--            </div>-->
                   <div>
                     <i><span style="color: red">Lưu ý:</span><span style="color: black">  Những thông tin (</span><span
                       style="color: red">*</span><span style="color: black">) bắt buộc nhập.</span></i>
@@ -272,24 +264,6 @@
 
                 </form>
               </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Thông báo</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              Chỉnh sửa thông tin nhân viên thành công
-            </div>
-            <div class="modal-footer">
-              <!--        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="closeModal()">Đóng</button>-->
-              <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Xác nhận</button>
             </div>
           </div>
         </div>
