--- a/C0721G2-livestock-farm-FE/src/app/component/employee/employee-create/employee-create.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/employee/employee-create/employee-create.component.html
@@ -84,8 +84,8 @@
                 <button class="btn btn btn-secondary fw-bold ms-3 mt-3 mb-3 " routerLink="/employee/list">Trở về</button>
               </div>
               <div class="card mb-4">
-                <div class="card-header pb-0">
-                  <h3>Thêm mới nhân viên</h3>
+                <div class="card-header pb-0 bg-success">
+                  <h3 class="text-white">Thêm mới nhân viên</h3>
                   <p class="text-success"></p>
                 </div>
                 <form class="row g-3 needs-validation m-3" method="post" [formGroup]="employeeForm" (ngSubmit)="onSubmit()">
