--- a/C0721G2-livestock-farm-FE/src/app/component/individual/individual-create/individual-create.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/individual/individual-create/individual-create.component.html
@@ -10,8 +10,8 @@
   <div class="modal-dialog mw-100 w-75" style="width: 1280px">
     <div class="modal-content col-12">
       <div class="card mb-8">
-        <div class="btn btn-success modal-header">
-          <h6>Thêm mới cá thể</h6>
+        <div class="btn btn-success modal-header bg-success">
+          <h3>Thêm mới cá thể</h3>
           <p class="text-success"></p>
         </div>
 
