--- a/C0721G2-livestock-farm-FE/src/app/component/cages/cages-edit/cages-edit.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/cages/cages-edit/cages-edit.component.html
@@ -91,8 +91,8 @@
                 </button>
               </div>
               <div class="card mb-4">
-                <div class="card-header pb-0">
-                  <h3>Chỉnh sửa chuồng nuôi</h3>
+                <div class="card-header pb-0 bg-success">
+                  <h3 class="text-white">Chỉnh sửa chuồng nuôi</h3>
                   <p class="text-success"></p>
                 </div>
                 <form class="row g-3 needs-validation m-3" [formGroup]="updateCage"
