--- a/C0721G2-livestock-farm-FE/src/app/component/individual/individual-list/individual-list.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/individual/individual-list/individual-list.component.html
@@ -120,7 +120,7 @@
                     </select>
                   </div>
                   <div class="col-xxl-2 col-xl-4  col-md-6 mb-3 ">
-                    <button type="submit" class="btn btn-secondary">Tìm kiếm
+                    <button type="submit" class="btn btn-success">Tìm kiếm
                     </button>
                   </div>
                 </form>
