--- a/C0721G2-livestock-farm-FE/src/app/component/news/news-edit/news-edit.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/news/news-edit/news-edit.component.html
@@ -126,7 +126,7 @@
                 <div class="btn-toolbar mb-3 d-flex flex-row-reverse bd-highlight" role="toolbar"
                      aria-label="Toolbar with button groups">
                   <div class="btn-group me-2 float-right">
-                    <button class="btn btn-success customBtn spinner-border" type="submit" [class.spinner]="loading" [disabled]="loading" >Cập nhập</button>
+                    <button class="btn btn-success customBtn" type="submit" [class.spinner]="loading" [disabled]="loading" >Lưu</button>
                   </div>
 
                   <div class="btn-group me-2 float-right">
