--- a/C0721G2-livestock-farm-FE/src/app/component/treatement/treatement-list/treatement-list.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/treatement/treatement-list/treatement-list.component.html
@@ -81,7 +81,7 @@
           <div class="col-12">
             <div class="card">
               <div class="container ">
-                <h1 class="d-flex justify-content-center pt-3 text-success">DANH SÁCH KHÁM CHỮA TRỊ</h1>
+                <h1 class="d-flex justify-content-center pt-3 text-success fw-bold">DANH SÁCH KHÁM CHỮA TRỊ</h1>
                 <div class="row pt-2 ">
                   <div class=" ">
                     <div class=" fw-bold float-start">
@@ -142,8 +142,7 @@
                           <th>Bệnh</th>
                           <th>Thuốc</th>
                           <th>Số lượng</th>
-                          <th class="text-center ">Sửa</th>
-                          <th class="text-center ">Xoá</th>
+                          <th class="text-center ">Tác vụ</th>
                         </tr>
                         </thead>
 
@@ -158,12 +157,10 @@
                           <td>{{treatement.medicine}}</td>
                           <td>{{treatement.quantily}} viên</td>
                           <td class="text-center ">
-                            <button class="btn btn-success text-center text-white  "
+                            <button class="btn btn-warning text-center text-white me-2  "
                                     data-bs-toggle="modal"
                                     data-bs-target="#detail"><i class="fas fa-edit"></i> Sửa
                             </button>
-                          </td>
-                          <td class="text-center   ">
                             <button class="btn btn-danger text-center  "
                                     data-bs-toggle="modal"
                                     data-bs-target="#staticBackdrop"><i class="fas fa-trash-alt"></i> Xóa
