--- a/C0721G2-livestock-farm-FE/src/app/component/individual/individual-create-a-lot/individual-create-a-lot.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/individual/individual-create-a-lot/individual-create-a-lot.component.html
@@ -1,5 +1,5 @@
 <div class="mat-card-header">
-  <h6>Thêm bằng file excel</h6>
+  <h4>Thêm bằng file excel</h4>
 </div>
 <div class="row">
   <div class="input-group col-12">
@@ -10,4 +10,10 @@
     <button class="btn btn-success" type="button" (click)="submitFile()" id="inputGroupFileAddon04">Thêm </button>
 
   </div>
+  <div class="row mt-3">
+    <div class="col-12 text-end">
+      <a href="https://docs.google.com/spreadsheets/d/1_91N8izG7v6YkQS0MqseLlJkau7I8d8U/edit?usp=sharing&ouid=116828765921222317986&rtpof=true&sd=true" target="_blank" download="">File mẫu</a>
+    </div>
+  </div>
+
 </div>
