--- a/C0721G2-livestock-farm-FE/src/app/component/buy/buy-create/buy-create.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/buy/buy-create/buy-create.component.html
@@ -80,7 +80,14 @@
     <button type="button" class="btn btn-secondary"
             data-bs-dismiss="modal" (click)=" onNoClick()">Đóng
     </button>
-    <button type="submit" class="btn text-light bg-warning"  [disabled]="buyIndividualForm.invalid">Gửi</button>
+    <div *ngIf="this.loading == ''">
+      <button type="submit" class="btn text-light bg-warning" [disabled]="buyIndividualForm.invalid">Gửi</button>
+    </div>
+    <div *ngIf="this.loading !== ''">
+      <div class="spinner-grow text-warning" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
   </div>
 
 </form>
